Fixes unexpected textwrap on Firefox in secondaryAction in Banner

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -268,6 +268,7 @@ $spinner-size: rem(20px);
   box-shadow: 0 -2px 0 0 rgba(var(--p-rgb-text), 0.25) inset;
   will-change: box-shadow;
   transition: box-shadow duration() easing();
+  display: block;
 }
 
 .Button {
